# AES-IGE_AEAD

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat
docs/: API.md  CHACHA20_POLY1305.md  DEOXYS.md  INTEGRATION.md  SPEC.md
include/: aes.h  aes_ige.h  aes_ige_aead.h  chacha20.h  chacha20_poly1305.h  deoxys.h  deoxys_bc.h  gf128.h  poly1305.h  poly_mac.h  sha256.h
python/: README.md  aes_ige_aead.c  pyproject.toml  setup.py  test_aes_ige_aead.py
src/: aes.c  aes_ige.c  aes_ige_aead.c  chacha20.c  chacha20_poly1305.c  deoxys.c  deoxys_bc.c  gf128.c  poly1305.c  poly_mac.c  sha256.c
tests/: test_vectors.c
